parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Controllers/Users/UsersController.Details.cs.pp
namespace $rootnamespace$.Controllers.Users
{
    using Models.Users;
    using Omu.ValueInjecter;
    using System.Web.Mvc;

    public partial class UsersController
    {
        public ActionResult Details(int id)
        {
            var user = UserService.GetById(id);

            var model = new UserViewModel();
            model.InjectFrom<UnflatLoopValueInjection>(user);

            return View(model);
        }
    }
}
